# homework_oop_14_1

./: README.md  pyproject.toml
src/: README.md  category.py  main.py  products.py
tests/: test_category.py  test_products.py
